--- a/Rover Tutorial/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+++ b/Rover Tutorial/ProjectSettings/Packages/com.unity.probuilder/Settings.json
@@ -146,7 +146,7 @@
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.LastSize",
-                "value": "{\"m_Value\":{\"x\":0.25,\"y\":0.125,\"z\":0.25}}"
+                "value": "{\"m_Value\":{\"x\":0.10000000149011612,\"y\":0.25,\"z\":0.10000000149011612}}"
             },
             {
                 "type": "UnityEngine.Quaternion, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
